pavucontrol-qt-0.17.0 / 2021-04-15
==================================
  * Removed the unused dbus dependency.

pavucontrol-qt-0.16.0 / 2020-11-01
==================================
  * Safely iterate over card profile info array.
  * Fall back to default icon when no candidate is found.
  * Elide playback name label if needed
  * Don't force a height on progressbars.
  * Remove warnings about unused function parameters.
  * Wrapped the text of connecting error label.

pavucontrol-qt-0.15.0 / 2020-04-23
==================================
  * Bumped version to 0.15.0.
  * Avoid char raw strings literals memory allocations.
  * Don't use automatic string conversions.
  * Removed (duplicated) string casts definitions.

pavucontrol-qt-0.14.1 / 2019-02-25
==================================

  * Bumped version to 0.14.1
  * Only translations was changed.

pavucontrol-qt-0.14.0 / 2019-01-25
==================================

  * Bumped version to 0.14.0
  * Added FreeBSD installation instructions
  * Implementation fixed:
    - Some code modernizations like range based loops,
      auto declared iterators and use of nullptr
    - Don't use automatic string conversions
    - Remove unused Makefile.am
    - Treat the 'off' card profile specifically
    - Mainwindow: Don't use deprecated libpulse members
  * Improved cmake scripting
    - Set cmake_minimum_required to 3.1.0
    - Removed locale compile definitons
  * Moved translations from lxqt-l10n back to pavucontrol-qt
    - Removed obsolete translation fuctionality
    - Added translation promo in README.md
  * Translation updates

pavucontrol-qt-0.4.0 / 2018-05-21
=================================

  * Bumped minor version to 4
  * Spanish translation update
  * Qt5.11 beta: xxxwidget: include QAction explicitely
  * CMake: Prevent in-source builds
  * build: Use pkg-config's *_LDFLAGS
  * fix http -> https
  * Fixed mentions of LXDE
  * pavucontrol: Remove unique application constraint