@@ -1,3 +1,7 @@
+pavucontrol-qt-1.0.0 / 2021-11-04
+==================================
+ * Bumped minimum required Qt version to 5.15.
+
 pavucontrol-qt-0.17.0 / 2021-04-15
 ==================================
   * Removed the unused dbus dependency.
